Partial_14Dec2021/force-app/main/default/objects/Redeem__c/Redeem__c.object-meta.xml
<CustomObject>
    <label>Redeem</label>
    <nameField>
        <displayFormat>Redeem-{000}</displayFormat>
        <label>Redeem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redeems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>