Partial_14Dec2021/force-app/main/default/objects/Redeem__c/fields/Request_Quantity_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Request_Quantity_Capacity__c</fullName>
    <label>Request Quantity/Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>