Partial_14Dec2021/force-app/main/default/objects/Redeem__c/fields/Request_Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Request_Unit_of_Measurement__c</fullName>
    <label>Request Unit of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>unit</fullName>
            </value>
            <value>
                <fullName>Sales Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>