Partial_14Dec2021/force-app/main/default/objects/Redeem__c/fields/Reward_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reward_Quantity__c</fullName>
    <label>Reward Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>